# optimus

./: .gitignore  CMakeLists.txt  main.cpp
app/: CMakeLists.txt
app/src/: main.cpp
core/: CMakeLists.txt
core/inc/: CoreFactory.h  IConfigModule.h  ICore.h  ICoreModule.h  IEnvironment.h  IHomeModule.h  ILogger.h  IParameterService.h  ISettingsModule.h  ParameterTypes.h
core/src/: ConfigModule.cpp  Core.cpp  CoreFactory.cpp  Environment.cpp  HomeModule.cpp  Logger.cpp  Parameter.cpp  ParameterService.cpp  SettingsModule.cpp
core/src/detail/: ConfigModule.h  Core.h  Environment.h  HomeModule.h  Logger.h  Parameter.h  ParameterCatalogue.h  ParameterService.h  SettingsModule.h
core/tst/: CMakeLists.txt  MockEnvironment.h  MockLogger.h  TestHomeModel.cpp  TestSample.cpp
ui/: CMakeLists.txt
ui/inc/: IViewModel.h  Navigator.h  Pages.h
ui/qml/: Config.qml  Home.qml  Main.qml  Settings.qml
ui/src/: ConfigViewModel.cpp  HomeViewModel.cpp  IViewModel.cpp  Navigator.cpp  Pages.cpp  SettingsViewModel.cpp
ui/src/detail/: ConfigViewModel.h  HomeViewModel.h  SettingsViewModel.h
ui/tst/: CMakeLists.txt
ui/tst/modelview/: CMakeLists.txt  TestModelView.cpp
ui/tst/qml/: CMakeLists.txt  TestUi.cpp  TestUi.qml
ui/tst/ui/: CMakeLists.txt  tst_TestUi.qml
ui/tst/viewmodel/: CMakeLists.txt  TestModelView.cpp
